[gd_scene load_steps=3 format=4 uid="uid://cr5yun0eyyrp6"]

[ext_resource type="Script" path="res://proto_world.gd" id="1_mdfth"]
[ext_resource type="TileSet" uid="uid://7ajxq63cp64r" path="res://tileset/protoTexture.tres" id="1_xeetc"]

[node name="ProtoWorld" type="Node2D"]
script = ExtResource("1_mdfth")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(497, 319)
zoom = Vector2(3, 3)

[node name="Layer2" type="TileMapLayer" parent="."]
z_index = 2
y_sort_enabled = true
position = Vector2(451, 294)
tile_map_data = PackedByteArray("AAD7/wAAAAABAAAAAAD7////AAABAAAAAAD7//7/AAABAAAAAAD7//3/AAABAAAAAAD8//3/AAABAAAAAAD9//3/AAABAAAAAAD+//3/AAAGAAAAAAAAAP7/AAAFAAAAAAABAP7/AAAGAAAAAAACAAAAAAAFAAAAAAACAAEAAAAGAAAAAAD7/wEAAAABAAAAAAA=")
tile_set = ExtResource("1_xeetc")
y_sort_origin = 2

[node name="Layer1" type="TileMapLayer" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(451, 294)
tile_map_data = PackedByteArray("AAD9//7/AAAEAAAAAAD8//7/AAAEAAAAAAD8////AAAEAAAAAAD8/wAAAAAEAAAAAAD8/wEAAAAEAAAAAAD8/wIAAAAEAAAAAAD+//7/AAAEAAAAAAD///7/AAAEAAAAAAAAAP7/AAAGAAAAAAA=")
tile_set = ExtResource("1_xeetc")
y_sort_origin = 1

[node name="Layer0" type="TileMapLayer" parent="."]
y_sort_enabled = true
position = Vector2(451, 294)
tile_map_data = PackedByteArray("AAD//wAAAAADAAAAAAD//wEAAAAEAAAAAAD+/wEAAAADAAAAAAD+/wAAAAADAAAAAAD+////AAADAAAAAAAAAP//AAADAAAAAAAAAAAAAAADAAAAAAAAAAEAAAADAAAAAAD9/wEAAAADAAAAAAD9/wAAAAADAAAAAAD9////AAADAAAAAAAAAAIAAAADAAAAAAD//wIAAAADAAAAAAD+/wIAAAADAAAAAAD9/wIAAAADAAAAAAABAP//AAADAAAAAAABAAAAAAADAAAAAAABAAEAAAADAAAAAAABAAIAAAADAAAAAAABAAMAAAADAAAAAAAAAAMAAAADAAAAAAD//wMAAAADAAAAAAD+/wMAAAADAAAAAAD9/wMAAAADAAAAAAD/////AAADAAAAAAACAP//AAAFAAAAAAACAAAAAAAGAAAAAAD//wQAAAAFAAAAAAAAAAQAAAAFAAAAAAD+/wQAAAAFAAAAAAD//wUAAAAFAAAAAAD//wYAAAAFAAAAAAAAAAcAAAAFAAAAAAD//wcAAAAFAAAAAAABAAcAAAAFAAAAAAACAAcAAAAFAAAAAAADAAcAAAAFAAAAAAAEAAYAAAAFAAAAAAAEAAUAAAAFAAAAAAAEAAQAAAAFAAAAAAAEAAMAAAAFAAAAAAAEAAIAAAAFAAAAAAAEAAEAAAAFAAAAAAAEAAAAAAAFAAAAAAAEAP//AAAFAAAAAAADAP//AAAFAAAAAAAEAAcAAAAFAAAAAAA=")
tile_set = ExtResource("1_xeetc")
